# repkg-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-demo.yml  release.yml
crates/repkg/: Cargo.toml
crates/repkg-cli/: Cargo.toml
crates/repkg-cli/src/: main.rs  output.rs
crates/repkg-cli/src/commands/: extract.rs  info.rs  mod.rs
crates/repkg-core/: Cargo.toml
crates/repkg-core/src/: lib.rs  package.rs
crates/repkg-core/src/texture/: enums.rs  frame_info.rs  mod.rs  tex.rs
crates/repkg-wasm/: Cargo.toml
crates/repkg-wasm/src/: lib.rs  log.rs
crates/repkg/src/: error.rs  lib.rs
crates/repkg/src/package/: mod.rs  reader.rs
crates/repkg/src/texture/: converter.rs  decompressor.rs  mod.rs  reader.rs
crates/repkg/tests/: integration_tests.rs
demo/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
demo/src/: App.tsx  download.ts  index.css  logger.ts  wasm.ts
demo/src/api/: client.ts  types.ts
demo/src/auth/: AuthContext.tsx  storage.ts
demo/src/components/: DropZone.tsx  ErrorToast.tsx  Features.tsx  FindFiles.tsx  Hero.tsx  PkgViewer.tsx  ProgressBar.tsx  TexViewer.tsx
demo/src/components/auth/: LoginButton.tsx  UserMenu.tsx
demo/src/components/workshop/: DownloadStatus.tsx  WorkshopDownloader.tsx  WorkshopInput.tsx
demo/src/hooks/: useDownload.ts  useSSE.ts
