[package]
name = "repkg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for extracting Wallpaper Engine PKG files and converting TEX textures"

[[bin]]
name = "repkg-rs"
path = "src/main.rs"

[dependencies]
repkg = { path = "../repkg" }
repkg-core = { path = "../repkg-core" }

# CLI framework
clap = { version = "4.4", features = ["derive", "color"] }

# Colored output
colored = "2.1"

# Directory traversal
walkdir = "2.4"

# Progress bars
indicatif = "0.17"

# Parallel processing
rayon = "1.8"

# JSON output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
