[package]
name = "repkg-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for repkg - Wallpaper Engine PKG/TEX converter"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
console-log = []

[dependencies]
repkg = { path = "../repkg" }
repkg-core = { path = "../repkg-core" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"

# Serialization for JS interop
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Better panic messages in browser console
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
